# micropad

./: .gitignore  README.md  TODO.org  bom.org
cli/: Cargo.toml
cli/src/: main.rs
firmware/: Cargo.toml  Makefile  memory.x  openocd_flash.sh  serial_protocol.md
firmware/.cargo/: config
firmware/src/: encoder.rs  hid.rs  main.rs  protocol.rs
hardware/: board_outline.dxf  case.scad  top_plate.dxf
hardware/micropad/: PEC11.kicad_mod  fp-info-cache  fp-lib-table  logo.kicad_mod  micropad-cache.lib  micropad.kicad_pcb  micropad.kicad_pcb-bak  micropad.net  micropad.pro  micropad.sch  micropad.sch-bak  square_only.kicad_mod  sym-lib-table
hardware/micropad/gerbers/: micropad-B_Cu.gbr  micropad-B_Mask.gbr  micropad-B_Paste.gbr  micropad-B_SilkS.gbr  micropad-Edge_Cuts.gbr  micropad-F_Cu.gbr  micropad-F_Mask.gbr  micropad-F_Paste.gbr  micropad-F_SilkS.gbr  micropad-NPTH.drl  micropad-PTH.drl  micropad-job.gbrjob
hardware/micropad/micropad.pretty/: REDFIT_IDC_SKEDD_CONN_4PIN.kicad_mod  USB-C_Female_E8124-015-01.kicad_mod  USB_C_Receptacle_Molex_1054500101.kicad_mod  XKB-U254_USB.kicad_mod  logo.kicad_mod  square_only.kicad_mod
micropad_host_if/: Cargo.toml
micropad_host_if/src/: main.rs
protocol/: Cargo.toml  serial_protocol.md
protocol/src/: lib.rs
