[package]
name = "micropad_ctrl"
version = "0.1.0"
authors = ["Blake Smith <blakesmith0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.0"
clap = "2.33.0"
log = "0.4"
micropad_protocol = { verison = "0.1", path = "../protocol"}
simple_logger = "1.6"