[package]
name = "micropad"
version = "0.1.0"
authors = ["Blake Smith <blakesmith0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
panic-halt = "0.2"
stm32f0xx-hal = {version = "0.17", features = ["stm32f042", "stm32-usbd"]}
