[package]
name = "micropad"
version = "0.1.0"
authors = ["Blake Smith <blakesmith0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
embedded-hal = "0.2.4"
micropad_protocol = {version = "0.1", path = "../protocol" }
nb = "1.0.0"
panic-halt = "0.2"
stm32f0xx-hal = {version = "0.17", features = ["stm32f042", "stm32-usbd", "rt"]}
usb-device = "0.2.7"
usbd-serial = "0.1.1"

smart-leds = "0.3"
smart-leds-trait = "0.2"
# Needed until this PR is in a released version: https://github.com/smart-leds-rs/apa102-spi-rs/pull/7
apa102-spi = { git = "https://github.com/smart-leds-rs/apa102-spi-rs.git", branch = "master" }

